force-app/code/objects/URE_Log__c/URE_Log__c.object-meta.xml
<CustomObject>
    <description>One record per Apex transaction. URE Logger header. Insert-only — never updated after creation. Powers diagnostic dashboards.</description>
    <label>URE Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>URE Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>URE Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>