force-app/code/objects/URE_Log__c/fields/Cpu_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cpu_Pct__c</fullName>
    <description>Percentage of CPU limit consumed at flush time (0-100).</description>
    <label>CPU %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>