force-app/code/objects/URE_Log__c/fields/Cpu_Used_Ms__c.field-meta.xml
<CustomField>
    <fullName>Cpu_Used_Ms__c</fullName>
    <description>CPU milliseconds consumed by this transaction at flush time.</description>
    <label>CPU Used (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>