force-app/code/objects/URE_Log__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>Transaction end timestamp from System.currentTimeMillis() at flush().</description>
    <label>End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>