force-app/code/objects/URE_Log__c/fields/Framework_Version__c.field-meta.xml
<CustomField>
    <fullName>Framework_Version__c</fullName>
    <description>Logger framework version. Allows filtering logs by framework version post-upgrade.</description>
    <label>Framework Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>