force-app/code/objects/URE_Log__c/fields/Gov_Limits_Final__c.field-meta.xml
<CustomField>
    <fullName>Gov_Limits_Final__c</fullName>
    <description>Compact display of all governor limits just before flush() DML. Human-readable in list views.</description>
    <label>Gov Limits Final</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>