force-app/code/objects/URE_Log__c/fields/Has_Errors__c.field-meta.xml
<CustomField>
    <fullName>Has_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if any ERROR or FATAL entry exists. Dashboard filter shortcut.</description>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>