force-app/code/objects/URE_Log__c/fields/Heap_Pct__c.field-meta.xml
<CustomField>
    <fullName>Heap_Pct__c</fullName>
    <description>Percentage of heap limit consumed at flush time (0-100).</description>
    <label>Heap %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>