force-app/code/objects/URE_Log__c/fields/Objects_Routed__c.field-meta.xml
<CustomField>
    <fullName>Objects_Routed__c</fullName>
    <description>Comma-delimited SObject API names encountered during routing.</description>
    <label>Objects Routed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>