force-app/code/objects/URE_Log__c/fields/Soql_Pct__c.field-meta.xml
<CustomField>
    <fullName>Soql_Pct__c</fullName>
    <description>Percentage of SOQL limit consumed at flush time.</description>
    <label>SOQL %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>