force-app/code/objects/URE_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>UUID-v4-style identifier. Unique per Apex transaction.</description>
    <externalId>true</externalId>
    <label>Transaction Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>