force-app/code/objects/URE_Log__c/fields/Warn_Count__c.field-meta.xml
<CustomField>
    <fullName>Warn_Count__c</fullName>
    <description>Count of WARN entries in this transaction.</description>
    <label>Warn Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>